modificado controller persona
